add isLoading in ApplicantListViewModel

--- a/Vitesse/Vitesse.xcodeproj/xcshareddata/xcschemes/Vitesse.xcscheme
+++ b/Vitesse/Vitesse.xcodeproj/xcshareddata/xcschemes/Vitesse.xcscheme
@@ -29,6 +29,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "AE1A48F22C9B0F9000E55FFC"
+               BuildableName = "VitesseTests.xctest"
+               BlueprintName = "VitesseTests"
+               ReferencedContainer = "container:Vitesse.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
